# notes

./: Git.md  git_fail_443.md  ssh.md
CV/: surf算法.md  yolo.md  计算机视觉.md
CV/CV_work1/: CV2Surf.py  FindFRT.py  improveeight.m  课程作业.docx
MCU/MPC5744p/: Modules_FlexCAN.md  mpc5744p-can.md  mpc5744p-etimer.md  mpc5744p-gpio.md  mpc5744p-pwm.md  mpc5744p-rtos.md
MCU/MPC5744p/test_gpio/: .cproject  .project  .test_gpio.g_c  .test_gpio.g_x  ProcessorExpert.pe  representations.aird
MCU/MPC5744p/test_gpio/.metadata/: version.ini
MCU/RTOS/: FreeRTOS.md
MCU/RTOS/test_RTOS/: test_RTOS.ioc
Optics/: EngineeringOptics.md
RTOS/: FreeRTOS.md
RTOS/RTOS_SoftwareSim/Project/: RTOS_ss.uvguix.ZZ22  RTOS_ss.uvoptx  RTOS_ss.uvprojx
RTOS/RTOS_SoftwareSim/User/: main.c
Raspberry/: Raspberry-pico.md
SLAM/: SLAM1.md  eigenMatrix.cpp  slambook2习题.md
SLAM/slam_test/: CMakeLists.txt  slam_test.categories  slam_test.kdev4
SLAM/slam_test/.kdev4/: slam_test.kdev4
SLAM/slam_test/src/: CMakeLists.txt  slam_test.cpp  slam_test.h  slam_test.json
SLAM/test_SLAM/: CMakeLists.txt  main.cpp  test_SLAM.kdev4
SLAM/test_SLAM/.kdev4/: test_SLAM.kdev4
base/: bookmarks.html
paper/: 参考文献引用格式.md
tools/: linux.md  改文件夹可见性.md
控制/: pid.md
数学/: 数理方程.md  数理方程1.md  数理方程2.md
数学/卡尔曼滤波/: kf_filter1.m  卡尔曼滤波.md
测控/: 10力&压力.md  7长度.md  9速度&加速度.md  精密测量理论与技术基础.md
测控/Optics/: EngineeringOptics.md
测控/精密测量/: 10力&压力.md  8角度.md  9速度&加速度.md
社会/: 社会讨论.md
编程/: Cpp.md  FreeRTOS.md  Git.md  HTML.md  freeRTOS.md  linux.md  matlab.md  python.md  python_test.py  test.c
网络/: 通信协议.md
(+172 files in other folders)
